--- a/manifest.slack.yaml
+++ b/manifest.slack.yaml
@@ -4,8 +4,8 @@ display_information:
 features:
   app_home:
     home_tab_enabled: false
-    messages_tab_enabled: true
-    messages_tab_read_only_enabled: true
+    messages_tab_enabled: false
+    messages_tab_read_only_enabled: false
   bot_user:
     display_name: mock-bot
     always_online: true
