--- a/.env.mock
+++ b/.env.mock
@@ -1,3 +1,5 @@
 SLACK_SIGNING_SECRET=mock-token
 SLACK_BOT_TOKEN=mock-token
 BOT_MODE=debug
+MEME_API_USERNAME=mock-username
+MEME_API_PASSWORD=mock-password
