feat: slack bot join on all public channels

--- a/golangci.yml
+++ b/golangci.yml
@@ -1,16 +1,11 @@
 linters:
-  enable:
-    - sqlclosecheck
+  enable
     - unconvert
     - stylecheck
-    - maligned
     - lll
     - ifshort
     - goimports
     - unparam
-
-  disable:
-    - errcheck
 
 linters-settings:
   lll:
